Fixed bug #41831 (pdo_sqlite prepared statements convert resources to strings).